@@ -334,6 +334,7 @@ wesnoth_sources = Split("""
     gui/dialogs/mp_cmd_wrapper.cpp
     gui/dialogs/title_screen.cpp
     gui/dialogs/transient_message.cpp
+    gui/dialogs/unit_attack.cpp
     gui/dialogs/unit_create.cpp
     gui/dialogs/wml_message.cpp
     gui/dialogs/icon_message.cpp
