@@ -37,6 +37,7 @@ Version 1.9.0-svn:
    * Fixed bug #15727: Allow wml message titles to wrap
      screen
    * Added the total number of villages to the status table lists
+   * Added a new attack dialog, available for testing with --new-widgets
  * WML Engine:
    * Deprecated [set_variable]'s random key, use rand instead
    * Renamed [unit][status] healable to unhealable so it can default to 'no'
